<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smbus_cpp_base_msg_sub</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jassie@todo.todo">jassie</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ffdirewolfbutton_msgs</depend>
  <depend>ffdirewolfbutton_msgs_tools</depend>
  <depend>smbus_car_msgs</depend>
  <depend>smbus_car_msgs_tools</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
